<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">recipe_pocket</string>

    <!-- activity_main 텍스트 -->
    <string name="title">어떤 음식이 땡기세요?</string>
    <string name="title1">오늘의 인기 요리</string>
    <string name="title1_1">지금 가장 많은 사람들이 찾고 있어요</string>
    <string name="title2">이런 요리는 어때요?</string>
    <string name="title2_1">추천하는 레시피들을 골라봤어요</string>
    <string name="title3">오늘의 요리 팁</string>
    <string name="title4">n분 이하 간단요리</string>
    <string name="title4_1">빠르고 쉽게 만들 수 있어요.</string>

    <!-- cook_card 텍스트 -->
    <string name="cook_image">요리 이미지</string>
    <string name="bookmark_button">북마크 버튼</string>
    <string name="cook_name">요리 이름이 참 많이 길죠? 하지만 어쩔 수 없어요. 테스트를 해야 되기 때문이에요.</string>
    <string name="rating_star">별점</string>
    <string name="default_rating">5.0</string>
    <string name="cooking_time">조리시간</string>
    <string name="cook_difficulty">난이도</string>
    <string name="profile_image">작성자 프로필 사진</string>
    <string name="profile_name">작성자</string>

    <string-array name="recipe_categories">
        <item>한식</item>
        <item>중식</item>
        <item>일식</item>
        <item>양식</item>
        <item>분식</item>
        <item>디저트</item>
        <item>음료</item>
        <item>기타</item>
    </string-array>
</resources>