<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="horizontal"
    android:padding="8dp">

    <!-- 좌측: 메인 이미지, 북마크 버튼 컨테이너 -->
    <FrameLayout
        android:layout_width="135dp"
        android:layout_height="135dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/recipe_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_main_rounded_gray"
                android:contentDescription="@string/cook_image"
                android:foreground="?attr/selectableItemBackground"
                android:scaleType="centerCrop" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:outlineAmbientShadowColor="@color/black"
            android:outlineSpotShadowColor="@color/black"
            app:cardCornerRadius="30dp"
            app:cardElevation="4dp"
            tools:targetApi="28">

            <ImageButton
                android:id="@+id/bookmark_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@color/white"
                android:clickable="true"
                android:contentDescription="@string/bookmark_button"
                android:focusable="true"
                android:src="@drawable/ic_bookmark" />
        </androidx.cardview.widget.CardView>
    </FrameLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry">

        <!-- 요리 이름 -->
        <TextView
            android:id="@+id/recipe_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/notosans_bold"
            android:includeFontPadding="false"
            android:maxLines="2"
            android:text="요리 이름이 참 많이 길죠? 하지만 어쩔 수 없..."
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/text_primary"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_star_fill" />

            <TextView
                android:id="@+id/rating_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_medium"
                android:includeFontPadding="false"
                android:paddingStart="2dp"
                android:text="@string/default_rating"
                android:textColor="@color/text_secondary"
                android:textSize="14sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/review_count_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:fontFamily="@font/notosans_medium"
                android:includeFontPadding="false"
                android:textColor="@color/text_secondary"
                android:textSize="12sp"
                tools:text="(1)" />

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginStart="12dp"
                android:alpha="0.7"
                android:scaleX="0.8"
                android:scaleY="0.8"
                android:src="@drawable/ic_like_filled"
                app:tint="#FF5252" />

            <TextView
                android:id="@+id/like_count_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_medium"
                android:includeFontPadding="false"
                android:paddingStart="2dp"
                android:textColor="@color/text_secondary"
                android:textSize="14sp"
                tools:ignore="RtlSymmetry"
                tools:text="12" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rating_display_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_clock"
                app:tint="@color/text_sub" />

            <TextView
                android:id="@+id/cooking_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:fontFamily="@font/notosans_medium"
                android:includeFontPadding="false"
                android:paddingStart="2dp"
                android:text="조리시간"
                android:textColor="@color/text_sub"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_fire"
                app:tint="@color/text_sub" />

            <TextView
                android:id="@+id/difficulty_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_medium"
                android:includeFontPadding="false"
                android:paddingStart="2dp"
                android:text="난이도"
                android:textColor="@color/text_sub"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <!-- 작성자 정보 -->
            <LinearLayout
                android:id="@+id/author_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/author_profile_image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/bg_main_circle_gray"
                    android:clipToOutline="true"
                    android:contentDescription="@string/profile_image"
                    android:scaleType="centerCrop"
                    tools:srcCompat="@tools:sample/avatars"
                    tools:targetApi="31" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/author_name_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/notosans_medium"
                        android:includeFontPadding="false"
                        android:textColor="@color/text_sub"
                        android:textSize="12sp"
                        tools:text="작성자" />

                    <TextView
                        android:id="@+id/author_title_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:background="@drawable/bg_title_badge"
                        android:fontFamily="@font/notosans_medium"
                        android:includeFontPadding="false"
                        android:paddingHorizontal="4dp"
                        android:paddingVertical="2dp"
                        android:textColor="@color/primary"
                        android:textSize="10sp"
                        android:visibility="gone"
                        tools:ignore="SmallSp"
                        tools:text="요리 장인"
                        tools:visibility="visible" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>